--- a/src/index.html
+++ b/src/index.html
@@ -1,36 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Webpack 4 Boilerplate</title>
-  </head>
-  <body>
-    <header class="header">
-      <h1>Webpack 4 Boilerplate</h1>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <section class="example">
-      <div class="example-style">
-        <p class="from-css">Hi, I'm from CSS</p>
-        <p class="from-sass">Hi, I'm from SASS</p>
-        <p class="from-scss">Hi, I'm from SCSS</p>
-      </div>
-      <div class="example-lazy-load">
-        <button id="lazy-load">Lazy load example</button>
-        <p>Hint: See Devtools network tabs and console tabs</p>
-      </div>
-    </section>
+  <title>Soundtracks - Steins;Gate</title>
+</head>
 
-    <a 
-      href="https://github.com/finmavis/webpack-4-boilerplate" 
-      target="_blank" 
-      rel="noopener noreferrer"
-      class="link"
-    >
-      Documentation
-    </a>
-  </body>
+<body>
+  <button id="play">play</button>
+  <button id="next">next</button>
+  <button id="prev">prev</button>
+  <button id="toggle-mute">toggle mute</button>
+  <p id="timer"></p>
+</body>
+
 </html>
