some bugs with instance

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
   <button id="next">next</button>
   <button id="prev">prev</button>
   <button id="toggle-mute">toggle mute</button>
+  <button id="loop">loop</button>
   <p id="timer"></p>
 </body>
 
