random and loop mode added

--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,12 @@
   <button id="next">next</button>
   <button id="prev">prev</button>
   <button id="toggle-mute">toggle mute</button>
-  <button id="loop">loop</button>
+  <button id="loop">toggle loop mode</button>
+  <button id="random">toggle random mode</button>
   <p id="timer"></p>
+  <main id="content">
+
+  </main>
 </body>
 
 </html>
