--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,19 @@
 </head>
 
 <body>
-  <button id="play">play</button>
-  <button id="next">next</button>
-  <button id="prev">prev</button>
-  <button id="toggle-mute">toggle mute</button>
-  <button id="loop">toggle loop mode</button>
-  <button id="random">toggle random mode</button>
+  <div>
+    <button id="play">play</button>
+    <button id="next">next</button>
+    <button id="prev">prev</button>
+    <button id="toggle-mute">toggle mute</button>
+    <button id="loop">toggle loop mode</button>
+    <button id="random">toggle random mode</button>
+  </div>
+  <div>
+    <input type="range" name="vol" id="vol" max="100" min="0">
+    <input type="range" name="duration" id="duration">
+  </div>
+
   <p id="timer"></p>
   <main id="content">
 
