add show timer when user is changing time

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     <input type="range" name="duration" id="duration">
   </div>
 
-  <p id="timer"></p>
+  <p id="timer">--:-- - --:--</p>
   <main id="content">
 
   </main>
