--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
   <title>Soundtracks - Steins;Gate</title>
 </head>
 
@@ -27,6 +29,10 @@
   <main id="content">
 
   </main>
+  <button class="mdc-button">
+    <div class="mdc-button__ripple"></div>
+    <span class="mdc-button__label">Button</span>
+  </button>
 </body>
 
 </html>
