--- a/src/index.html
+++ b/src/index.html
@@ -29,10 +29,13 @@
   <main id="content">
 
   </main>
-  <button class="mdc-button">
-    <div class="mdc-button__ripple"></div>
-    <span class="mdc-button__label">Button</span>
+
+  <button class="mdc-icon-button" aria-label="Add to favorites" aria-pressed="false"
+    data-mdc-auto-init="MDCIconButtonToggle">
+    <i class="material-icons mdc-icon-button__icon mdc-icon-button__icon--on">favorite</i>
+    <i class="material-icons mdc-icon-button__icon">favorite_border</i>
   </button>
+
 </body>
 
 </html>
