--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel='stylesheet' href='https://unpkg.com/material-components-web/dist/material-components-web.min.css'>
+  <link rel='stylesheet' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
+  <link href="https://fonts.googleapis.com/css?family=Oxanium&display=swap" rel="stylesheet">
 
   <title>Soundtracks - Steins;Gate</title>
 </head>
 
 <body>
+  <header class=" mdc-top-app-bar">
+    <div class="mdc-top-app-bar__row">
+      <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
+        <button class="mdc-icon-button material-icons mdc-top-app-bar__navigation-icon--unbounded">menu</button><span
+          class="mdc-top-app-bar__title">San Francisco, CA</span> </section>
+      <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end">
+        <button class="mdc-icon-button material-icons mdc-top-app-bar__action-item--unbounded"
+          aria-label="Download">file_download</button>
+        <button class="mdc-icon-button material-icons mdc-top-app-bar__action-item--unbounded"
+          aria-label="Print this page">print</button>
+        <button class="mdc-icon-button material-icons mdc-top-app-bar__action-item--unbounded"
+          aria-label="Bookmark this page">bookmark</button>
+      </section>
+    </div>
+  </header>
+
   <div>
     <button id="play">play</button>
     <button id="prev">prev</button>
@@ -27,15 +45,44 @@
 
   <p id="timer">--:-- - --:--</p>
   <main id="content">
-
   </main>
 
-  <button class="mdc-icon-button" aria-label="Add to favorites" aria-pressed="false"
-    data-mdc-auto-init="MDCIconButtonToggle">
-    <i class="material-icons mdc-icon-button__icon mdc-icon-button__icon--on">favorite</i>
-    <i class="material-icons mdc-icon-button__icon">favorite_border</i>
-  </button>
+  <div class="mdc-slider mdc-slider--discrete" tabindex="0" role="slider" aria-valuemin="0" aria-valuemax="100"
+    aria-valuenow="0" aria-label="Select Value">
+    <div class="mdc-slider__track-container">
+      <div class="mdc-slider__track"></div>
+    </div>
+    <div class="mdc-slider__thumb-container">
+      <div class="mdc-slider__pin">
+        <span class="mdc-slider__pin-value-marker"></span>
+      </div>
+      <svg class="mdc-slider__thumb" width="21" height="21">
+        <circle cx="10.5" cy="10.5" r="7.875"></circle>
+      </svg>
+      <div class="mdc-slider__focus-ring"></div>
+    </div>
+  </div>
 
+  <div class="player-viewport p-viewport-collapse">
+    <div class="player-wrapper p-wrapper-collapse">
+      <div class="p-container">
+        <div class="p-data">
+          <img src="/assets/fatima.jpg" alt="Hacking To The Gate" id="p-thumb">
+          <div class="p-info">
+            <h3 id="p-title">Hacking To The Gate</h3>
+            <p id="p-description">Opening</p>
+          </div>
+        </div>
+        <div class="p-actions">
+          <button id="p-random" class="mdc-icon-button material-icons">call_made</button>
+          <button id="p-prev" class="mdc-icon-button material-icons">skip_previous</button>
+          <button id="p-play" class="mdc-icon-button material-icons">play_arrow</button>
+          <button id="p-next" class="mdc-icon-button material-icons">skip_next</button>
+          <button id="p-loop" class="mdc-icon-button material-icons">repeat</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
