--- a/src/index.html
+++ b/src/index.html
@@ -14,17 +14,18 @@
 </head>
 
 <body>
-  <header class=" mdc-top-app-bar">
+  <header class="mdc-top-app-bar">
     <div class="mdc-top-app-bar__row">
       <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
-        <button class="mdc-icon-button material-icons mdc-top-app-bar__navigation-icon--unbounded">menu</button><span
-          class="mdc-top-app-bar__title">San Francisco, CA</span> </section>
-      <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end">
-        <button class="mdc-icon-button material-icons mdc-top-app-bar__action-item--unbounded"
+        <button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button">menu</button>
+        <span class="mdc-top-app-bar__title">Title</span>
+      </section>
+      <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end" role="toolbar">
+        <button class="material-icons mdc-top-app-bar__action-item mdc-icon-button"
           aria-label="Download">file_download</button>
-        <button class="mdc-icon-button material-icons mdc-top-app-bar__action-item--unbounded"
+        <button class="material-icons mdc-top-app-bar__action-item mdc-icon-button"
           aria-label="Print this page">print</button>
-        <button class="mdc-icon-button material-icons mdc-top-app-bar__action-item--unbounded"
+        <button class="material-icons mdc-top-app-bar__action-item mdc-icon-button"
           aria-label="Bookmark this page">bookmark</button>
       </section>
     </div>
