--- a/src/index.html
+++ b/src/index.html
@@ -45,27 +45,28 @@
   </div>
 
   <p id="timer">--:-- - --:--</p>
-  <main id="content">
-  </main>
 
-  <div class="mdc-slider mdc-slider--discrete" tabindex="0" role="slider" aria-valuemin="0" aria-valuemax="100"
-    aria-valuenow="0" aria-label="Select Value">
-    <div class="mdc-slider__track-container">
-      <div class="mdc-slider__track"></div>
-    </div>
-    <div class="mdc-slider__thumb-container">
-      <div class="mdc-slider__pin">
-        <span class="mdc-slider__pin-value-marker"></span>
-      </div>
-      <svg class="mdc-slider__thumb" width="21" height="21">
-        <circle cx="10.5" cy="10.5" r="7.875"></circle>
-      </svg>
-      <div class="mdc-slider__focus-ring"></div>
-    </div>
-  </div>
 
-  <div class="player-viewport p-viewport-collapse">
-    <div class="player-wrapper p-wrapper-collapse">
+
+  <div state="collapsed" id="app-player-bottom" class="player-viewport p-viewport-collapsed">
+    <div class="player-wrapper p-wrapper-collapsed">
+      <!-- <div class="p-vol-wrapper">
+        <div class="mdc-slider mdc-slider--discrete" tabindex="0" role="slider" aria-valuemin="0" aria-valuemax="100"
+          aria-valuenow="100" aria-label="Select Value">
+          <div class="mdc-slider__track-container">
+            <div class="mdc-slider__track"></div>
+          </div>
+          <div class="mdc-slider__thumb-container">
+            <div class="mdc-slider__pin">
+              <span class="mdc-slider__pin-value-marker"></span>
+            </div>
+            <svg class="mdc-slider__thumb" width="21" height="21">
+              <circle cx="10.5" cy="10.5" r="7.875"></circle>
+            </svg>
+            <div class="mdc-slider__focus-ring"></div>
+          </div>
+        </div>
+      </div> -->
       <div class="p-container">
         <div class="p-data">
           <img src="/assets/fatima.jpg" alt="Hacking To The Gate" id="p-thumb">
