all player ui state moved to separated file

--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
         </div>
       </div> -->
       <div class="p-container">
-        <div class="p-data">
+        <div id="p-data">
           <img src="/assets/fatima.jpg" alt="Hacking To The Gate" id="p-thumb">
           <div class="p-info">
             <h3 id="p-title">Hacking To The Gate</h3>
