--- a/src/index.html
+++ b/src/index.html
@@ -59,6 +59,9 @@
               <p id="p-description">Opening</p>
             </div>
           </div>
+          <div id="p-wave-wrapper">
+            <div id="p-wave-container"></div>
+          </div>
           <div class="p-actions">
             <button id="p-random" class="mdc-icon-button material-icons">call_made</button>
             <button id="p-prev" class="mdc-icon-button material-icons">skip_previous</button>
