--- a/src/index.html
+++ b/src/index.html
@@ -73,6 +73,7 @@
       </div>
     </div>
     <div class="state-expanded">
+      <div id="p-expanded-wave-wrapper"></div>
       <div>
         <button id="play">play</button>
         <button id="prev">prev</button>
