added reinit on wave instance

--- a/src/index.html
+++ b/src/index.html
@@ -73,6 +73,9 @@
       </div>
     </div>
     <div class="state-expanded">
+      <div class="p-expanded-top-bar">
+
+      </div>
       <div id="p-expanded-wave-wrapper"></div>
       <div>
         <button id="play">play</button>
