add generate random color util

--- a/src/index.html
+++ b/src/index.html
@@ -33,28 +33,32 @@
 
   <div state="collapsed" id="app-player-bottom" class="player-viewport p-viewport-collapsed">
     <div class="state-expanded">
+      <div id="p-expanded-wave-wrapper"></div>
+
       <div class="p-expanded-top-bar-wrapper">
         <div class="p-expanded-top-bar-container">
           <button id="p-expanded-back-button" class="mdc-icon-button material-icons">expand_more</button>
           <button id="p-expanded-vol" class="mdc-icon-button material-icons">volume_up</button>
         </div>
       </div>
+
       <div class="p-expanded-body">
         <div class="p-expanded-data">
           <p id="timer">--:-- - --:--</p>
         </div>
         <div class="p-expanded-controls">
-          <button id="play">play</button>
-          <button id="prev">prev</button>
-          <button id="next">next</button>
-          <button id="loop">toggle loop mode</button>
-          <button id="random">toggle random mode</button>
+          <div class="p-actions">
+            <button id="random" class="mdc-icon-button material-icons">call_made</button>
+            <button id="prev" class="mdc-icon-button material-icons">skip_previous</button>
+            <button id="play" class="mdc-icon-button material-icons">play_arrow</button>
+            <button id="next" class="mdc-icon-button material-icons">skip_next</button>
+            <button id="loop" class="mdc-icon-button material-icons">repeat</button>
+          </div>
           <div>
             <input type="range" name="duration" id="duration">
           </div>
         </div>
       </div>
-      <div id="p-expanded-wave-wrapper"></div>
     </div>
 
     <div class="state-collapsed">
