added main layout to expanded player

--- a/src/index.html
+++ b/src/index.html
@@ -47,15 +47,20 @@
           <p id="timer">--:-- - --:--</p>
         </div>
         <div class="p-expanded-controls">
-          <div class="p-actions">
+          <div class="p-expanded-extra-actions">
+            <button id="to-home" class="mdc-icon-button material-icons">queue_music</button>
+            <button id="favorite" class="mdc-icon-button material-icons">favorite_border</button>
+            <button id="mute" class="mdc-icon-button material-icons">volume_up</button>
+          </div>
+          <div class="p-expanded-duration">
+            <input type="range" name="duration" id="duration">
+          </div>
+          <div class="p-expanded-actions">
             <button id="random" class="mdc-icon-button material-icons">call_made</button>
             <button id="prev" class="mdc-icon-button material-icons">skip_previous</button>
             <button id="play" class="mdc-icon-button material-icons">play_arrow</button>
             <button id="next" class="mdc-icon-button material-icons">skip_next</button>
             <button id="loop" class="mdc-icon-button material-icons">repeat</button>
-          </div>
-          <div>
-            <input type="range" name="duration" id="duration">
           </div>
         </div>
       </div>
