added duration sldier

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
 
       <div class="p-expanded-body">
         <div class="p-expanded-data">
-          <p id="timer">--:-- - --:--</p>
+          aaaaa
         </div>
         <div class="p-expanded-controls">
           <div class="p-expanded-extra-actions">
@@ -53,7 +53,22 @@
             <button id="mute" class="mdc-icon-button material-icons">volume_up</button>
           </div>
           <div class="p-expanded-duration">
-            <input type="range" name="duration" id="duration">
+            <div class="mdc-slider" tabindex="0" role="slider" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0"
+              aria-label="Select Value">
+              <div class="mdc-slider__track-container">
+                <div class="mdc-slider__track"></div>
+              </div>
+              <div class="mdc-slider__thumb-container">
+                <svg class="mdc-slider__thumb" width="21" height="21">
+                  <circle cx="10.5" cy="10.5" r="7.875"></circle>
+                </svg>
+                <div class="mdc-slider__focus-ring"></div>
+              </div>
+            </div>
+            <div class="p-expanded-time-display">
+              <p id="p-expanded-time-init">--:--</p>
+              <p id="p-expanded-time-end">--:--</p>
+            </div>
           </div>
           <div class="p-expanded-actions">
             <button id="random" class="mdc-icon-button material-icons">call_made</button>
