add functional icons for expanded player

--- a/src/index.html
+++ b/src/index.html
@@ -44,13 +44,15 @@
 
       <div class="p-expanded-body">
         <div class="p-expanded-data">
-          aaaaa
+          <img id="p-expanded-thumb" class="p-expanded-data-img" src="/assets/fatima.jpg" alt="teste">
+          <h1 id="p-expanded-title" class="p-expanded-data-title">Hacking To The Gate</h1>
+          <h1 id="p-expanded-description" class="p-expanded-data-description">Opening</h1>
         </div>
         <div class="p-expanded-controls">
           <div class="p-expanded-extra-actions">
-            <button id="to-home" class="mdc-icon-button material-icons">queue_music</button>
-            <button id="favorite" class="mdc-icon-button material-icons">favorite_border</button>
-            <button id="mute" class="mdc-icon-button material-icons">volume_up</button>
+            <button id="p-expanded-to-home" id="to-home" class="mdc-icon-button material-icons">queue_music</button>
+            <button id="p-expanded-favorite" class="mdc-icon-button material-icons">favorite_border</button>
+            <button id="p-expanded-mute" class="mdc-icon-button material-icons">volume_up</button>
           </div>
           <div class="p-expanded-duration">
             <div class="mdc-slider" tabindex="0" role="slider" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0"
@@ -71,11 +73,11 @@
             </div>
           </div>
           <div class="p-expanded-actions">
-            <button id="random" class="mdc-icon-button material-icons">call_made</button>
-            <button id="prev" class="mdc-icon-button material-icons">skip_previous</button>
-            <button id="play" class="mdc-icon-button material-icons">play_arrow</button>
-            <button id="next" class="mdc-icon-button material-icons">skip_next</button>
-            <button id="loop" class="mdc-icon-button material-icons">repeat</button>
+            <button id="p-expanded-random" class="mdc-icon-button material-icons">call_made</button>
+            <button id="p-expanded-prev" class="mdc-icon-button material-icons">skip_previous</button>
+            <button id="p-expanded-play" class="mdc-icon-button material-icons">play_arrow</button>
+            <button id="p-expanded-next" class="mdc-icon-button material-icons">skip_next</button>
+            <button id="p-expanded-loop" class="mdc-icon-button material-icons">repeat</button>
           </div>
         </div>
       </div>
