adding favorite feat

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
         <div class="p-expanded-data">
           <img id="p-expanded-thumb" class="p-expanded-data-img" src="/assets/fatima.jpg" alt="teste">
           <h1 id="p-expanded-title" class="p-expanded-data-title">Hacking To The Gate</h1>
-          <h1 id="p-expanded-description" class="p-expanded-data-description">Opening</h1>
+          <p id="p-expanded-description" class="p-expanded-data-description">Opening</p>
         </div>
         <div class="p-expanded-controls">
           <div class="p-expanded-extra-actions">
