added arrow down to collpase and arrow up to expand player shortcuts

--- a/src/index.html
+++ b/src/index.html
@@ -35,14 +35,20 @@
     <div class="state-expanded">
       <div id="p-expanded-wave-wrapper"></div>
 
-      <div class="p-expanded-top-bar-wrapper">
+      <div id="p-expanded-top-bar-wrapper" class="p-expanded-top-bar-wrapper">
         <div class="p-expanded-top-bar-container">
           <button id="p-expanded-back-button" class="mdc-icon-button material-icons">expand_more</button>
           <button id="p-expanded-vol" class="mdc-icon-button material-icons">volume_up</button>
         </div>
       </div>
 
+
       <div class="p-expanded-body">
+
+        <div class="p-expanded-vol-slider-wrapper">
+
+        </div>
+
         <div class="p-expanded-data">
           <img id="p-expanded-thumb" class="p-expanded-data-img" src="/assets/fatima.jpg" alt="teste">
           <h1 id="p-expanded-title" class="p-expanded-data-title">Hacking To The Gate</h1>
