init butterfly effect

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,8 @@
 </head>
 
 <body>
+  <canvas id="butterfly-effect"></canvas>
+
   <header class="mdc-top-app-bar">
     <div class="mdc-top-app-bar__row">
       <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
@@ -44,10 +46,9 @@
 
 
       <div class="p-expanded-body">
+        <div id="p-expanded-background-image"></div>
 
-        <div class="p-expanded-vol-slider-wrapper">
-
-        </div>
+        <div class="p-expanded-vol-slider-wrapper"></div>
 
         <div class="p-expanded-data">
           <img id="p-expanded-thumb" class="p-expanded-data-img" src="/assets/fatima.jpg" alt="teste">
