init butterfly effect with canvas animations

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,9 @@
 </head>
 
 <body>
-  <canvas id="butterfly-effect"></canvas>
+  <div id="butterfly-effect-wrapper">
+    <canvas id="butterfly-effect"></canvas>
+  </div>
 
   <header class="mdc-top-app-bar">
     <div class="mdc-top-app-bar__row">
