--- a/src/index.html
+++ b/src/index.html
@@ -15,105 +15,90 @@
 
 <body>
   <header class="mdc-top-app-bar">
-    <div class="mdc-top-app-bar__row">
-      <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
-        <button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button">menu</button>
-        <span class="mdc-top-app-bar__title">Title</span>
-      </section>
-      <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end" role="toolbar">
-        <button class="material-icons mdc-top-app-bar__action-item mdc-icon-button"
-          aria-label="Download">file_download</button>
-        <button class="material-icons mdc-top-app-bar__action-item mdc-icon-button"
-          aria-label="Print this page">print</button>
-        <button class="material-icons mdc-top-app-bar__action-item mdc-icon-button"
-          aria-label="Bookmark this page">bookmark</button>
-      </section>
-    </div>
+    <h1>Steins;Gate</h1>
+    <h4>Soundtracks</h4>
   </header>
 
-  <div state="collapsed" id="app-player-bottom" class="player-viewport p-viewport-collapsed">
-
-    <div class="state-collapsed">
-      <div id="p-wave-wrapper">
-        <div id="p-wave-container"></div>
-      </div>
-      <div class="player-wrapper">
-        <div class="p-container">
-          <div id="p-data">
-            <img src="/assets/fatima.jpg" alt="Hacking To The Gate" id="p-thumb">
-            <div class="p-info">
-              <h3 id="p-title"></h3>
-              <p id="p-description"></p>
-            </div>
+  <div class="state-collapsed show">
+    <div id="p-wave-wrapper">
+      <div id="p-wave-container"></div>
+    </div>
+    <div class="player-wrapper">
+      <div class="p-container">
+        <div id="p-data">
+          <img src="/assets/fatima.jpg" alt="Hacking To The Gate" id="p-thumb">
+          <div class="p-info">
+            <h3 id="p-title"></h3>
+            <p id="p-description"></p>
           </div>
-          <div class="p-actions">
-            <button id="p-random" class="mdc-icon-button material-icons">call_made</button>
-            <button id="p-prev" class="mdc-icon-button material-icons">skip_previous</button>
-            <button id="p-play" class="mdc-icon-button material-icons">play_arrow</button>
-            <button id="p-next" class="mdc-icon-button material-icons">skip_next</button>
-            <button id="p-loop" class="mdc-icon-button material-icons">repeat</button>
-          </div>
+        </div>
+        <div class="p-actions">
+          <button id="p-random" class="mdc-icon-button material-icons">call_made</button>
+          <button id="p-prev" class="mdc-icon-button material-icons">skip_previous</button>
+          <button id="p-play" class="mdc-icon-button material-icons">play_arrow</button>
+          <button id="p-next" class="mdc-icon-button material-icons">skip_next</button>
+          <button id="p-loop" class="mdc-icon-button material-icons">repeat</button>
         </div>
       </div>
     </div>
-
-    <div class="state-expanded">
-      <div id="p-expanded-wave-wrapper"></div>
-
-      <div id="p-expanded-top-bar-wrapper" class="p-expanded-top-bar-wrapper">
-        <div class="p-expanded-top-bar-container">
-          <button id="p-expanded-back-button" class="mdc-icon-button material-icons">expand_more</button>
-          <button id="p-expanded-vol" class="mdc-icon-button material-icons">volume_up</button>
-        </div>
-      </div>
-
-
-      <div class="p-expanded-body">
-        <div id="p-expanded-background-image"></div>
-
-        <div class="p-expanded-vol-slider-wrapper"></div>
-
-        <div class="p-expanded-data">
-          <img id="p-expanded-thumb" class="p-expanded-data-img" src="/assets/fatima.jpg" alt="teste">
-          <h1 id="p-expanded-title" class="p-expanded-data-title">Hacking To The Gate</h1>
-          <p id="p-expanded-description" class="p-expanded-data-description">Opening</p>
-        </div>
-        <div class="p-expanded-controls">
-          <div class="p-expanded-extra-actions">
-            <button id="p-expanded-to-home" id="to-home" class="mdc-icon-button material-icons">queue_music</button>
-            <button id="p-expanded-favorite" class="mdc-icon-button material-icons">favorite_border</button>
-            <button id="p-expanded-mute" class="mdc-icon-button material-icons">volume_up</button>
-          </div>
-          <div class="p-expanded-duration">
-            <div class="mdc-slider" tabindex="0" role="slider" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0"
-              aria-label="Select Value">
-              <div class="mdc-slider__track-container">
-                <div class="mdc-slider__track"></div>
-              </div>
-              <div class="mdc-slider__thumb-container">
-                <svg class="mdc-slider__thumb" width="21" height="21">
-                  <circle cx="10.5" cy="10.5" r="7.875"></circle>
-                </svg>
-                <div class="mdc-slider__focus-ring"></div>
-              </div>
-            </div>
-            <div class="p-expanded-time-display">
-              <p id="p-expanded-time-init">--:--</p>
-              <p id="p-expanded-time-end">--:--</p>
-            </div>
-          </div>
-          <div class="p-expanded-actions">
-            <button id="p-expanded-random" class="mdc-icon-button material-icons">call_made</button>
-            <button id="p-expanded-prev" class="mdc-icon-button material-icons">skip_previous</button>
-            <button id="p-expanded-play" class="mdc-icon-button material-icons">play_arrow</button>
-            <button id="p-expanded-next" class="mdc-icon-button material-icons">skip_next</button>
-            <button id="p-expanded-loop" class="mdc-icon-button material-icons">repeat</button>
-          </div>
-        </div>
-      </div>
-    </div>
-
   </div>
+
+  <div class="state-expanded hide">
+    <div id="p-expanded-wave-wrapper"></div>
+
+    <div id="p-expanded-top-bar-wrapper" class="p-expanded-top-bar-wrapper">
+      <div class="p-expanded-top-bar-container">
+        <button id="p-expanded-back-button" class="mdc-icon-button material-icons">expand_more</button>
+        <button id="p-expanded-vol" class="mdc-icon-button material-icons">volume_up</button>
+      </div>
+    </div>
+
+
+    <div class="p-expanded-body">
+      <div id="p-expanded-background-image"></div>
+
+      <div class="p-expanded-vol-slider-wrapper"></div>
+
+      <div class="p-expanded-data">
+        <img id="p-expanded-thumb" class="p-expanded-data-img" src="/assets/fatima.jpg" alt="teste">
+        <h1 id="p-expanded-title" class="p-expanded-data-title">Hacking To The Gate</h1>
+        <p id="p-expanded-description" class="p-expanded-data-description">Opening</p>
+      </div>
+      <div class="p-expanded-controls">
+        <div class="p-expanded-extra-actions">
+          <button id="p-expanded-to-home" id="to-home" class="mdc-icon-button material-icons">queue_music</button>
+          <button id="p-expanded-favorite" class="mdc-icon-button material-icons">favorite_border</button>
+          <button id="p-expanded-mute" class="mdc-icon-button material-icons">volume_up</button>
+        </div>
+        <div class="p-expanded-duration">
+          <div class="mdc-slider" tabindex="0" role="slider" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0"
+            aria-label="Select Value">
+            <div class="mdc-slider__track-container">
+              <div class="mdc-slider__track"></div>
+            </div>
+            <div class="mdc-slider__thumb-container">
+              <svg class="mdc-slider__thumb" width="21" height="21">
+                <circle cx="10.5" cy="10.5" r="7.875"></circle>
+              </svg>
+              <div class="mdc-slider__focus-ring"></div>
+            </div>
+          </div>
+          <div class="p-expanded-time-display">
+            <p id="p-expanded-time-init">--:--</p>
+            <p id="p-expanded-time-end">--:--</p>
+          </div>
+        </div>
+        <div class="p-expanded-actions">
+          <button id="p-expanded-random" class="mdc-icon-button material-icons">call_made</button>
+          <button id="p-expanded-prev" class="mdc-icon-button material-icons">skip_previous</button>
+          <button id="p-expanded-play" class="mdc-icon-button material-icons">play_arrow</button>
+          <button id="p-expanded-next" class="mdc-icon-button material-icons">skip_next</button>
+          <button id="p-expanded-loop" class="mdc-icon-button material-icons">repeat</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </body>
 
 </html>
