--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,6 @@
       </div>
     </div>
 
-
     <div class="p-expanded-body">
       <div id="p-expanded-background-image"></div>
 
@@ -72,7 +71,7 @@
         </div>
         <div class="p-expanded-duration">
           <div class="mdc-slider" tabindex="0" role="slider" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0"
-            aria-label="Select Value">
+            aria-label="Select Duration">
             <div class="mdc-slider__track-container">
               <div class="mdc-slider__track"></div>
             </div>
