added fake main content and state span

--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,102 @@
 </head>
 
 <body>
-  <header class="mdc-top-app-bar">
-    <h1>Steins;Gate</h1>
+  <header class="top-bar-wrapper">
+    <img src="/assets/sg-logo.jpg" alt="Steins Gate Logo">
     <h4>Soundtracks</h4>
   </header>
 
+  <main class="content">
+    <h1>Teste</h1>
+    <p>teste teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste
+      teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste
+      teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste
+      teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste
+      teste testeteste teste teste teste teste teste teste teste testeteste teste testeteste teste teste teste teste
+      testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste teste
+      testeteste teste teste</p>
+    <p>teste teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste
+      teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste
+      teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste
+      teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste
+      teste testeteste teste teste teste teste teste teste teste testeteste teste testeteste teste teste teste teste
+      testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste teste
+      testeteste teste teste</p>
+    <p>teste teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste
+      teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste
+      teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste
+      teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste
+      teste testeteste teste teste teste teste teste teste teste testeteste teste testeteste teste teste teste teste
+      testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste teste
+      testeteste teste teste</p>
+    <p>teste teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste
+      teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste
+      teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste
+      teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste
+      teste testeteste teste teste teste teste teste teste teste testeteste teste testeteste teste teste teste teste
+      testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste teste
+      testeteste teste teste</p>
+    <p>teste teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste
+      teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste
+      teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste
+      teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste
+      teste testeteste teste teste teste teste teste teste teste testeteste teste testeteste teste teste teste teste
+      testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste teste
+      testeteste teste teste</p>
+    <p>teste teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste
+      teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste
+      teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste
+      teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste
+      teste testeteste teste teste teste teste teste teste teste testeteste teste testeteste teste teste teste teste
+      testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste teste
+      testeteste teste teste</p>
+    <p>teste teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste
+      teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste
+      teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste
+      teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste
+      teste testeteste teste teste teste teste teste teste teste testeteste teste testeteste teste teste teste teste
+      testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste teste
+      testeteste teste teste</p>
+    <p>teste teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste
+      teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste
+      teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste
+      teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste
+      teste testeteste teste teste teste teste teste teste teste testeteste teste testeteste teste teste teste teste
+      testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste teste
+      testeteste teste teste</p>
+    <p>teste teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste
+      teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste
+      teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste
+      teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste
+      teste testeteste teste teste teste teste teste teste teste testeteste teste testeteste teste teste teste teste
+      testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste teste
+      testeteste teste teste</p>
+    <p>teste teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste
+      teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste
+      teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste
+      teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste
+      teste testeteste teste teste teste teste teste teste teste testeteste teste testeteste teste teste teste teste
+      testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste teste
+      testeteste teste teste</p>
+    <p>teste teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste
+      teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste
+      teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste
+      teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste
+      teste testeteste teste teste teste teste teste teste teste testeteste teste testeteste teste teste teste teste
+      testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste teste
+      testeteste teste teste</p>
+    <p>teste teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste
+      teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste
+      teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste
+      teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste
+      teste testeteste teste teste teste teste teste teste teste testeteste teste testeteste teste teste teste teste
+      testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste teste
+      testeteste teste teste</p>
+  </main>
+
+  <div class="state-span collapsed">
+
+  </div>
   <div class="state-collapsed show">
     <div id="p-wave-wrapper">
       <div id="p-wave-container"></div>
