--- a/src/index.html
+++ b/src/index.html
@@ -8,16 +8,16 @@
 
   <link rel='stylesheet' href='https://unpkg.com/material-components-web/dist/material-components-web.min.css'>
   <link rel='stylesheet' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
-  <!-- <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet"> -->
-  <!-- <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"> -->
-  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+
+  <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
+
 
   <title>Soundtracks - Steins;Gate</title>
 </head>
 
 <body>
   <header class="top-bar-wrapper">
-    <h1 id="steins-gate">Steins;Gate</h1>
+    <h1 class="steins-gate">Steins;<span class="steins-gate sg-main-letter">G</span>ate</h1>
     <h4>Soundtracks</h4>
   </header>
 
