--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,7 @@
 
 <body>
   <header class="top-bar-wrapper">
-    <h1 class="steins-gate">Steins;<span class="steins-gate sg-main-letter">G</span>ate</h1>
-    <h4>Soundtracks</h4>
+    <h1 id="sg-main-name" class="steins-gate">Steins;<span class="steins-gate sg-main-letter">G</span>ate</h1>
   </header>
 
   <main class="content">
@@ -142,7 +141,7 @@
     <div id="p-expanded-top-bar-wrapper" class="p-expanded-top-bar-wrapper">
       <div class="p-expanded-top-bar-container">
         <button id="p-expanded-back-button" class="mdc-icon-button material-icons">expand_more</button>
-        <button id="p-expanded-vol" class="mdc-icon-button material-icons">volume_up</button>
+        <button id="p-expanded-vol" class="mdc-icon-button material-icons">headset</button>
       </div>
     </div>
 
