--- a/src/index.html
+++ b/src/index.html
@@ -19,99 +19,16 @@
 
 <body>
   <header class="top-bar-wrapper">
-    <h1 id="sg-main-name" class="steins-gate">Steins;<span class="steins-gate sg-main-letter">G</span>ate</h1>
+    <div id="sg-logo">
+      <h1 id="sg-main-name" class="steins-gate">Steins;<span class="steins-gate sg-main-letter">G</span>ate</h1>
+    </div>
+    <button class="mdc-icon-button material-icons">search</button>
   </header>
 
-  <main class="content">
-    <h1>Teste</h1>
-    <p>teste teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste
-      teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste
-      teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste
-      teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste
-      teste testeteste teste teste teste teste teste teste teste testeteste teste testeteste teste teste teste teste
-      testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste teste
-      testeteste teste teste</p>
-    <p>teste teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste
-      teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste
-      teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste
-      teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste
-      teste testeteste teste teste teste teste teste teste teste testeteste teste testeteste teste teste teste teste
-      testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste teste
-      testeteste teste teste</p>
-    <p>teste teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste
-      teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste
-      teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste
-      teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste
-      teste testeteste teste teste teste teste teste teste teste testeteste teste testeteste teste teste teste teste
-      testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste teste
-      testeteste teste teste</p>
-    <p>teste teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste
-      teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste
-      teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste
-      teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste
-      teste testeteste teste teste teste teste teste teste teste testeteste teste testeteste teste teste teste teste
-      testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste teste
-      testeteste teste teste</p>
-    <p>teste teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste
-      teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste
-      teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste
-      teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste
-      teste testeteste teste teste teste teste teste teste teste testeteste teste testeteste teste teste teste teste
-      testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste teste
-      testeteste teste teste</p>
-    <p>teste teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste
-      teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste
-      teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste
-      teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste
-      teste testeteste teste teste teste teste teste teste teste testeteste teste testeteste teste teste teste teste
-      testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste teste
-      testeteste teste teste</p>
-    <p>teste teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste
-      teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste
-      teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste
-      teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste
-      teste testeteste teste teste teste teste teste teste teste testeteste teste testeteste teste teste teste teste
-      testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste teste
-      testeteste teste teste</p>
-    <p>teste teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste
-      teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste
-      teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste
-      teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste
-      teste testeteste teste teste teste teste teste teste teste testeteste teste testeteste teste teste teste teste
-      testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste teste
-      testeteste teste teste</p>
-    <p>teste teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste
-      teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste
-      teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste
-      teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste
-      teste testeteste teste teste teste teste teste teste teste testeteste teste testeteste teste teste teste teste
-      testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste teste
-      testeteste teste teste</p>
-    <p>teste teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste
-      teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste
-      teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste
-      teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste
-      teste testeteste teste teste teste teste teste teste teste testeteste teste testeteste teste teste teste teste
-      testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste teste
-      testeteste teste teste</p>
-    <p>teste teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste
-      teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste
-      teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste
-      teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste
-      teste testeteste teste teste teste teste teste teste teste testeteste teste testeteste teste teste teste teste
-      testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste teste
-      testeteste teste teste</p>
-    <p>teste teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste
-      teste teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste
-      teste teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste
-      teste teste testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste
-      teste testeteste teste teste teste teste teste teste teste testeteste teste testeteste teste teste teste teste
-      testeteste teste teste teste teste teste teste teste testeteste teste teste teste teste teste teste teste
-      testeteste teste teste</p>
+  <main class="main-content">
   </main>
 
   <div class="state-span collapsed">
-
   </div>
   <div class="state-collapsed show">
     <div id="p-wave-wrapper">
@@ -136,7 +53,6 @@
       </div>
     </div>
   </div>
-
   <div class="state-expanded hide">
     <div id="p-expanded-wave-wrapper"></div>
 
