--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,37 @@
   </header>
 
   <main class="main-content">
-
+    <section class="song-viewport">
+      <div class="s-category-wrapper">
+        <div class="s-category-container">
+          <div class="s-category-item-container">
+            <div class="s-category-item">Item 1</div>
+          </div>
+          <div class="s-category-item-container">
+            <div class="s-category-item">Item 2</div>
+          </div>
+          <div class="s-category-item-container">
+            <div class="s-category-item">Item 3</div>
+          </div>
+          <div class="s-category-item-container">
+            <div class="s-category-item">Item 4</div>
+          </div>
+        </div>
+      </div>
+      <div class="s-general-actions">
+        <button notransparent class="use-custom-style mdc-icon-button material-icons">shuffle</button>
+        <button notransparent class="use-custom-style mdc-icon-button material-icons">play_arrow</button>
+      </div>
+      <div class="song-list-wrapper">
+        <div class="s-item-wrapper">
+          <img src="/assets/fatima.jpg" alt="Imagem teste" class="s-item-cover">
+          <div class="s-item-data">
+            <h3 class="s-item-title">Hacking To The Gate</h3>
+            <p class="s-item-description">Opening</p>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
   <div class="state-span collapsed">
