--- a/src/index.html
+++ b/src/index.html
@@ -45,11 +45,14 @@
       </div>
       <div class="s-general-actions">
         <button notransparent class="use-custom-style mdc-icon-button material-icons">shuffle</button>
-        <button notransparent class="use-custom-style mdc-icon-button material-icons">play_arrow</button>
+        <button id="s-list-song-play" notransparent
+          class="use-custom-style mdc-icon-button material-icons">play_arrow</button>
       </div>
       <div class="song-list-wrapper">
         <div class="s-item-wrapper">
-          <img src="/assets/fatima.jpg" alt="Imagem teste" class="s-item-cover">
+          <div class="s-item-cover-wrapper">
+            <img src="/assets/fatima.jpg" alt="Imagem teste" class="s-item-cover">
+          </div>
           <div class="s-item-data">
             <h3 class="s-item-title">Hacking To The Gate</h3>
             <p class="s-item-description">Opening</p>
