--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,9 @@
           class="use-custom-style mdc-icon-button material-icons">play_arrow</button>
       </div>
       <div class="song-list-wrapper">
+
         <div class="s-item-wrapper">
+          <div class="s-item-wave-wrapper"></div>
           <div class="s-item-cover-wrapper">
             <img src="/assets/fatima.jpg" alt="Imagem teste" class="s-item-cover">
           </div>
@@ -57,7 +59,9 @@
             <h3 class="s-item-title">Hacking To The Gate</h3>
             <p class="s-item-description">Opening</p>
           </div>
+          <button notransparent class="s-item-button-play mdc-icon-button material-icons">play_arrow</button>
         </div>
+
       </div>
     </section>
   </main>
