move brute data to data.json

--- a/src/index.html
+++ b/src/index.html
@@ -47,35 +47,7 @@
         <button notransparent class="use-custom-style mdc-icon-button material-icons">shuffle</button>
         <button notransparent class="use-custom-style mdc-icon-button material-icons">play_arrow</button>
       </div>
-      <div class="song-list-wrapper">
-
-        <div class="s-item-wrapper">
-          <div class="s-item-span"></div>
-          <div class="s-item-wave-wrapper"></div>
-          <div class="s-item-cover-wrapper">
-            <img src="/assets/hacking-to-the-gate.jpg" alt="Imagem teste" class="s-item-cover">
-          </div>
-          <div class="s-item-data">
-            <h3 class="s-item-title">Hacking To The Gate</h3>
-            <p class="s-item-description">Opening</p>
-          </div>
-          <button notransparent class="s-item-button-play mdc-icon-button material-icons">play_arrow</button>
-        </div>
-
-        <div class="s-item-wrapper s-item-wrapper-selected">
-          <div class="s-item-span"></div>
-          <div class="s-item-wave-wrapper"></div>
-          <div class="s-item-cover-wrapper">
-            <img src="/assets/fatima.jpg" alt="Imagem teste" class="s-item-cover">
-          </div>
-          <div class="s-item-data">
-            <h3 class="s-item-title">Hacking To The Gate</h3>
-            <p class="s-item-description">Opening</p>
-          </div>
-          <button notransparent class="s-item-button-play mdc-icon-button material-icons">pause</button>
-        </div>
-
-      </div>
+      <div class="song-list-wrapper"></div>
     </section>
   </main>
 
