are u ok? no *cat dead*

--- a/src/index.html
+++ b/src/index.html
@@ -44,8 +44,8 @@
         </div>
       </div>
       <div class="s-general-actions">
-        <button notransparent class="use-custom-style mdc-icon-button material-icons">shuffle</button>
-        <button notransparent class="use-custom-style mdc-icon-button material-icons">play_arrow</button>
+        <button id="g-random" notransparent class="use-custom-style mdc-icon-button material-icons">shuffle</button>
+        <button id="g-start" notransparent class="use-custom-style mdc-icon-button material-icons">play_arrow</button>
       </div>
       <div class="song-list-wrapper"></div>
     </section>
