initializing pan move feat to scroll categories

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,27 @@
           <div class="s-category-item-container">
             <div class="s-category-item">Item 4</div>
           </div>
+          <div class="s-category-item-container">
+            <div class="s-category-item">Item 1</div>
+          </div>
+          <div class="s-category-item-container">
+            <div class="s-category-item">Item 2</div>
+          </div>
+          <div class="s-category-item-container">
+            <div class="s-category-item">Item 3</div>
+          </div>
+          <div class="s-category-item-container">
+            <div class="s-category-item">Item 4</div>
+          </div>
+          <div class="s-category-item-container">
+            <div class="s-category-item">Item 2</div>
+          </div>
+          <div class="s-category-item-container">
+            <div class="s-category-item">Item 3</div>
+          </div>
+          <div class="s-category-item-container">
+            <div class="s-category-item">Item 4</div>
+          </div>
         </div>
       </div>
       <div class="s-general-actions">
