added layout for state playlists

--- a/src/index.html
+++ b/src/index.html
@@ -26,41 +26,7 @@
   <main class="main-content">
     <section class="song-viewport">
       <div class="s-category-wrapper">
-        <div class="s-category-container">
-          <div class="s-category-item-container">
-            <div class="s-category-item">Item 1</div>
-          </div>
-          <div class="s-category-item-container">
-            <div class="s-category-item">Item 2</div>
-          </div>
-          <div class="s-category-item-container">
-            <div class="s-category-item">Item 3</div>
-          </div>
-          <div class="s-category-item-container">
-            <div class="s-category-item">Item 4</div>
-          </div>
-          <div class="s-category-item-container">
-            <div class="s-category-item">Item 5</div>
-          </div>
-          <div class="s-category-item-container">
-            <div class="s-category-item">Item 6</div>
-          </div>
-          <div class="s-category-item-container">
-            <div class="s-category-item">Item 7</div>
-          </div>
-          <div class="s-category-item-container">
-            <div class="s-category-item">Item 8</div>
-          </div>
-          <div class="s-category-item-container">
-            <div class="s-category-item">Item 9</div>
-          </div>
-          <div class="s-category-item-container">
-            <div class="s-category-item">Item 10</div>
-          </div>
-          <div class="s-category-item-container">
-            <div class="s-category-item">Item 11</div>
-          </div>
-        </div>
+        <div class="s-category-container"></div>
       </div>
       <div class="s-general-actions">
         <button id="g-random" notransparent class="use-custom-style mdc-icon-button material-icons">shuffle</button>
