--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,17 @@
 </head>
 
 <body>
-  <h1>Parcel Boilerplate</h1>
-  <script src="../src/index.js"></script>
+  <div class="user-input-wrapper var--visible">
+    <button class="user-input-wrapper__main-button">Start</button>
+  </div>
+
+  <div class="main">
+    <canvas class="audio-layer-1"></canvas>
+  </div>
+
+  <audio loop class="audio-element" src="../src/assets/epitomize.mp3"></audio>
+
+  <script src="../src/index.ts"></script>
 </body>
 
 
